--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "@apollo/client": "^3.12.0",
     "@chromatic-com/storybook": "^3.2.2",
     "@eslint/js": "^9.15.0",
+    "@fortawesome/free-regular-svg-icons": "^6.7.1",
+    "@fortawesome/free-solid-svg-icons": "^6.7.1",
     "@storybook/addon-essentials": "^8.4.6",
     "@storybook/addon-interactions": "^8.4.6",
     "@storybook/addon-onboarding": "^8.4.6",
@@ -26,6 +29,7 @@
     "@storybook/react": "^8.4.6",
     "@storybook/react-vite": "^8.4.6",
     "@storybook/test": "^8.4.6",
+    "@types/mousetrap": "^1.6.15",
     "@types/node": "^22.10.1",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
@@ -35,7 +39,12 @@
     "eslint-plugin-react-refresh": "^0.4.14",
     "eslint-plugin-storybook": "^0.11.1",
     "globals": "^15.12.0",
+    "mousetrap": "^1.6.5",
+    "react-bootstrap": "^2.10.6",
+    "react-intl": "^7.0.1",
+    "react-router-dom": "^7.0.2",
     "storybook": "^8.4.6",
+    "thehandy": "^1.1.0",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.15.0",
     "vite": "^6.0.1",
