--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-bootstrap": "^2.10.6",
     "react-intl": "^7.0.1",
     "react-router-dom": "^7.0.2",
+    "sass": "^1.82.0",
     "storybook": "^8.4.6",
     "thehandy": "^1.1.0",
     "typescript": "~5.6.2",
