--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "eslint-plugin-storybook": "^0.11.1",
     "globals": "^15.12.0",
     "mousetrap": "^1.6.5",
+    "msw": "^2.6.6",
+    "msw-storybook-addon": "^2.0.4",
     "react-bootstrap": "^2.10.6",
     "react-intl": "^7.0.1",
     "react-router-dom": "^7.0.2",
@@ -57,6 +59,11 @@
   "eslintConfig": {
     "extends": [
       "plugin:storybook/recommended"
+    ]
+  },
+  "msw": {
+    "workerDirectory": [
+      "static"
     ]
   }
 }
