--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "chromatic": "npx chromatic --project-token=chpt_e680848f798a428"
   },
   "dependencies": {
     "react": "^18.3.1",
@@ -23,14 +24,14 @@
     "@eslint/js": "^9.15.0",
     "@fortawesome/free-regular-svg-icons": "^6.7.1",
     "@fortawesome/free-solid-svg-icons": "^6.7.1",
-    "@storybook/addon-a11y": "^8.4.6",
-    "@storybook/addon-essentials": "^8.4.6",
-    "@storybook/addon-interactions": "^8.4.6",
-    "@storybook/addon-onboarding": "^8.4.6",
-    "@storybook/blocks": "^8.4.6",
-    "@storybook/react": "^8.4.6",
-    "@storybook/react-vite": "^8.4.6",
-    "@storybook/test": "^8.4.6",
+    "@storybook/addon-a11y": "^8.4.7",
+    "@storybook/addon-essentials": "^8.4.7",
+    "@storybook/addon-interactions": "^8.4.7",
+    "@storybook/addon-onboarding": "^8.4.7",
+    "@storybook/blocks": "^8.4.7",
+    "@storybook/react": "^8.4.7",
+    "@storybook/react-vite": "^8.4.7",
+    "@storybook/test": "^8.4.7",
     "@types/mousetrap": "^1.6.15",
     "@types/node": "^22.10.1",
     "@types/react": "^18.3.12",
@@ -49,7 +50,7 @@
     "react-intl": "^7.0.1",
     "react-router-dom": "^7.0.2",
     "sass": "^1.82.0",
-    "storybook": "^8.4.6",
+    "storybook": "^8.4.7",
     "thehandy": "^1.1.0",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.15.0",
