--- a/package.json
+++ b/package.json
@@ -16,15 +16,16 @@
     "test-storybook": "test-storybook"
   },
   "dependencies": {
+    "@apollo/client": "^3.12.2",
     "@fortawesome/fontawesome-svg-core": "^6.7.1",
     "@fortawesome/pro-light-svg-icons": "^6.7.1",
     "@fortawesome/pro-solid-svg-icons": "^6.7.1",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "graphql": "^16.9.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@apollo/client": "^3.12.0",
     "@chromatic-com/storybook": "^3.2.2",
     "@eslint/js": "^9.15.0",
     "@fortawesome/free-regular-svg-icons": "^6.7.1",
