--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-router-dom": "^7.0.2",
     "sass": "^1.82.0",
     "storybook": "^8.4.7",
+    "storybook-dark-mode": "^4.0.2",
     "thehandy": "^1.1.0",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.15.0",
