--- a/.gitignore
+++ b/.gitignore
@@ -6,11 +6,15 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
+*storybook.log
 
 node_modules
+build
 dist
 dist-ssr
 *.local
+
+.env
 
 # Editor directories and files
 .vscode/*
