--- a/package.json
+++ b/package.json
@@ -4,26 +4,76 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "build": "npm run build:plugin && npm run build:app",
+    "build:app": "tsc -b && vite build",
+    "build:plugin": "tsc -b && vite build --config plugin.config.ts",
+    "chromatic": "npx chromatic --project-token=chpt_e680848f798a428",
     "dev": "vite",
-    "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "npm run dev",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build",
+    "test-storybook": "test-storybook"
   },
   "dependencies": {
+    "@apollo/client": "^3.12.2",
+    "@fortawesome/fontawesome-svg-core": "^6.7.1",
+    "@fortawesome/pro-light-svg-icons": "^6.7.1",
+    "@fortawesome/pro-solid-svg-icons": "^6.7.1",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "graphql": "^16.9.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^3.2.2",
     "@eslint/js": "^9.15.0",
+    "@fortawesome/free-regular-svg-icons": "^6.7.1",
+    "@fortawesome/free-solid-svg-icons": "^6.7.1",
+    "@storybook/addon-a11y": "^8.4.7",
+    "@storybook/addon-essentials": "^8.4.7",
+    "@storybook/addon-interactions": "^8.4.7",
+    "@storybook/addon-onboarding": "^8.4.7",
+    "@storybook/blocks": "^8.4.7",
+    "@storybook/react": "^8.4.7",
+    "@storybook/react-vite": "^8.4.7",
+    "@storybook/test": "^8.4.7",
+    "@storybook/test-runner": "^0.20.1",
+    "@types/mousetrap": "^1.6.15",
+    "@types/node": "^22.10.1",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react-swc": "^3.5.0",
+    "bootstrap": "^5.3.3",
     "eslint": "^9.15.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
+    "eslint-plugin-storybook": "^0.11.1",
     "globals": "^15.12.0",
+    "mousetrap": "^1.6.5",
+    "msw": "^2.6.6",
+    "msw-storybook-addon": "^2.0.4",
+    "react-bootstrap": "^2.10.6",
+    "react-intl": "^7.0.1",
+    "react-router-dom": "^7.0.2",
+    "sass": "^1.82.0",
+    "storybook": "^8.4.7",
+    "storybook-dark-mode": "^4.0.2",
+    "thehandy": "^1.1.0",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.15.0",
-    "vite": "^6.0.1"
+    "vite": "^6.0.1",
+    "vite-plugin-static-copy": "^2.2.0"
+  },
+  "eslintConfig": {
+    "extends": [
+      "plugin:storybook/recommended"
+    ]
+  },
+  "msw": {
+    "workerDirectory": [
+      "static"
+    ]
   }
 }
