--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@fortawesome/pro-light-svg-icons": "^6.7.1",
     "@fortawesome/pro-solid-svg-icons": "^6.7.1",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "classnames": "^2.5.1",
     "graphql": "^16.9.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
