--- a/package.json
+++ b/package.json
@@ -37,10 +37,12 @@
     "@storybook/addon-interactions": "^8.4.7",
     "@storybook/addon-onboarding": "^8.4.7",
     "@storybook/blocks": "^8.4.7",
+    "@storybook/jest": "^0.2.2",
     "@storybook/react": "^8.4.7",
     "@storybook/react-vite": "^8.4.7",
     "@storybook/test": "^8.4.7",
     "@storybook/test-runner": "^0.20.1",
+    "@storybook/testing-library": "^0.2.1",
     "@types/mousetrap": "^1.6.15",
     "@types/node": "^22.10.1",
     "@types/react": "^18.3.12",
